--- a/components/styles.module.css
+++ b/components/styles.module.css
@@ -110,6 +110,16 @@
   color: #ff0000;
 }
 
+.instagram {
+  color: #e4405f;
+  /* または inherit */
+}
+
+.facebook {
+  color: #3b5998;
+  /* または inherit */
+}
+
 .linkedin:hover {
   color: #0077b5;
 }
@@ -129,16 +139,18 @@
     flex-direction: column;
   }
 
-  .footer > div {
+  .footer>div {
     margin-top: 1em;
   }
 
   .footer .settings {
     order: 1;
   }
+
   .footer .social {
     order: 2;
   }
+
   .footer .copyright {
     order: 3;
   }
@@ -191,14 +203,17 @@
 }
 
 @keyframes octocat-wave {
+
   0%,
   100% {
     transform: rotate(0);
   }
+
   20%,
   60% {
     transform: rotate(-25deg);
   }
+
   40%,
   80% {
     transform: rotate(10deg);
