--- a/components/styles.module.css
+++ b/components/styles.module.css
@@ -82,6 +82,12 @@
   stroke-width: 1.5;
 }
 
+.pageSocial a svg {
+  fill: currentColor;
+  stroke: currentColor;
+  stroke-width: 1.5;
+}
+
 .settings a:last-of-type,
 .social a:last-of-type {
   margin-right: 0;
@@ -116,11 +122,10 @@
   color: #ff0000;
 }
 
-.instagram:hover {
+.pageSocial .instagram:hover {
   background-color: #e4405f;
   color: white;
   border-radius: 50%;
-  padding: 0.3em;
 }
 
 .facebook:hover  {
