--- a/components/styles.module.css
+++ b/components/styles.module.css
@@ -240,9 +240,9 @@
   stroke: currentColor;
   stroke-width: 1.5;
 }
-/* Instagram 背景色ホバー補強 */
-.instagram:hover .PageSocial_actionBgPane__tSoQL {
-  background-color: #e4405f;
+/* Instagramホバー時、背景Paneに色を付ける */
+a.instagram:hover .PageSocial_actionBgPane__tSoQL {
+  background-color: #e4405f !important;
 }
 
 /* Facebook（右側） */
