--- a/components/styles.module.css
+++ b/components/styles.module.css
@@ -229,44 +229,21 @@
 /* ✅ PageSocial（右側縦並び）のスタイル限定 */
 /* ========================================== */
 
-/* Instagram（右側） */
-/* .pageSocial .action.instagram:hover {
-  background-color: #e4405f;
-  color: white;
-  border-radius: 50%;
-}
-.pageSocial .action.instagram svg {
-  fill: currentColor;
-  stroke: currentColor;
-  stroke-width: 1.5;
-} */
-
-/* Facebook（右側） */
-/* .pageSocial .action.facebook:hover {
-  background-color: #3b5998;
-  color: white;
-  border-radius: 50%;
-}
-.pageSocial .action.facebook svg {
-  fill: currentColor;
-  stroke: currentColor;
-  stroke-width: 1.5;
-} */
-
-
-/* Facebook */
-a.facebook:hover .PageSocial_actionBgPane__tSoQL {
-  background-color: #3b5998;
-}
-a.facebook:hover {
-  color: white;
-}
+/* 汎用クラスに対応したスタイル（クラス名が変わっても効く！） */
 
 /* Instagram */
-a.instagram:hover .PageSocial_actionBgPane__tSoQL {
+a.instagram:hover .bgPane {
   background-color: #e4405f;
 }
 a.instagram:hover {
+  color: white;
+}
+
+/* Facebook */
+a.facebook:hover .bgPane {
+  background-color: #3b5998;
+}
+a.facebook:hover {
   color: white;
 }
 
