--- a/styles/notion.css
+++ b/styles/notion.css
@@ -84,6 +84,9 @@
 
 .notion-collection-card-cover img {
   border-radius: 16px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* 画像のアスペクト比を維持しながら領域いっぱいに表示 */
 }
 
 .notion-collection-card {
@@ -93,6 +96,7 @@
 .notion-collection-card-cover {
   border-radius: 16px;
   box-shadow: 2px 2px 8px 4px rgba(15, 15, 15, 0.1);
+  height: 250px; /* 高さを設定 - 必要に応じて調整してください */
 }
 
 .notion-collection-card-cover {
