--- a/components/styles.module.css
+++ b/components/styles.module.css
@@ -24,6 +24,11 @@
   background-color: var(--bg-color);
 }
 
+/* Notionページコンテナ - ヘッダー用のスペースを確保 */
+.notionPageContainer {
+  padding-top: 70px; /* ヘッダーの高さと同じ */
+}
+
 .loadingIcon {
   animation: spinner 0.6s linear infinite;
   display: block;
@@ -267,4 +272,11 @@ a.facebook:hover {
 }
 .social a.facebook svg {
   fill: currentColor;
+}
+
+/* モバイル調整 */
+@media only screen and (max-width: 768px) {
+  .notionPageContainer {
+    padding-top: 60px; /* スクロール時のヘッダー高さ */
+  }
 }
