--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 60px;
+  height: 50px;
   background-color: rgba(255, 255, 255, 0.95);
   backdrop-filter: blur(5px);
   z-index: 1000;
@@ -15,7 +15,7 @@
 }
 
 .headerScrolled {
-  height: 50px;
+  height: 40px;
 }
 
 .darkHeader {
@@ -34,36 +34,10 @@
   justify-content: space-between;
 }
 
-.headerLeftSection {
-  display: flex;
-  align-items: center;
-}
-
-.logo {
-  display: flex;
-  align-items: center;
-  font-size: 1.25rem;
-  font-weight: bold;
-  color: inherit;
-  text-decoration: none;
-  transition: opacity 0.2s;
-  margin-right: 1.5rem;
-}
-
-.logo:hover {
-  opacity: 0.8;
-}
-
-.siteName {
-  font-weight: 700;
-  background: linear-gradient(45deg, #605dec, #8b63fe);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-
 /* Desktop Navigation */
 .desktopNav {
   display: flex;
+  margin-left: 16px;
 }
 
 .navList {
@@ -129,6 +103,7 @@
 .headerRight {
   display: flex;
   align-items: center;
+  margin-left: auto;
 }
 
 .iconButton {
@@ -245,10 +220,10 @@
 /* Mobile Menu */
 .mobileMenu {
   position: fixed;
-  top: 60px;
+  top: 50px;
   left: 0;
   width: 100%;
-  height: calc(100vh - 60px);
+  height: calc(100vh - 50px);
   background-color: rgba(255, 255, 255, 0.98);
   backdrop-filter: blur(10px);
   z-index: 999;
@@ -261,8 +236,8 @@
 }
 
 .headerScrolled + .mobileMenu {
-  top: 50px;
-  height: calc(100vh - 50px);
+  top: 40px;
+  height: calc(100vh - 40px);
 }
 
 .mobileMenuOpen {
