--- a/components/NotionSearch.module.css
+++ b/components/NotionSearch.module.css
@@ -118,6 +118,15 @@
   color: #555;
 }
 
+.apiToggleHelp {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 4px;
+  font-size: 14px;
+  cursor: help;
+}
+
 .closeButton {
   display: flex;
   align-items: center;
@@ -269,6 +278,13 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   line-height: 1.4;
+}
+
+.searchResultPreview mark {
+  background-color: rgba(255, 230, 0, 0.3);
+  padding: 0 2px;
+  border-radius: 2px;
+  font-weight: 500;
 }
 
 .resultThumbnail {
